Added game events
