# docs/swagger.json
@@ -523,12 +523,6 @@
                         "schema": {
                             "$ref": "#/definitions/resources.PlayerRepresenatation"
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 }
             }
@@ -562,6 +556,34 @@
                             "items": {
                                 "$ref": "#/definitions/model.GameJson"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/tournaments/{id}/games/events": {
+            "get": {
+                "produces": [
+                    "application/x-json-stream"
+                ],
+                "tags": [
+                    "tournament"
+                ],
+                "summary": "Opens a web socket for tournamnent game start event",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tournament ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/resources.GameStartEventRepresentation"
                         }
                     }
                 }
@@ -1187,6 +1209,14 @@
                     }
                 },
                 "winner": {
+                    "type": "string"
+                }
+            }
+        },
+        "resources.GameStartEventRepresentation": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "string"
                 }
             }
